--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,52 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Дизайн Человека - наука о генетических особенностях человека. 
+      Бесплатный расчет бодиграфа даст ответы на вопросы о вашем призвании и о 
+      способе принятии правильных решений. Расширенное прочтение бодиграфа составлено
+      аналитиком Human Design, так же Генные Ключи, прогнозы, подбор команды"
     />
+    <meta name='keywords' content='Дизайн Человека, Хьюман Дизайн, Human Design, Human 
+    Design X, расчет бодиграфа, бесплатная расшифровка бодиграфа, расчет бодиграфа онлайн, 
+    дизайн человека консультация, дизайн человека сообщество, генные ключи, BG5, подбор 
+    команды, gene keys'>
+    <meta content='@humdesign' property='twitter:site'>
+    <meta content="website" property="og:type">
+    <meta content="HumDesign - Узнайте все о Дизайне Человека,  Расчет бодиграфа, бесплатная 
+    расшифровка карты, генные ключи " property="og:title">
+    <meta content="http://humdesign.ru/" property="og:url">
+    <meta content='https://cdn.iconscout.com/icon/free/png-512/react-1-282599.png' property="og:image">
+    <meta content="Дизайн Человека - наука о генетических особенностях человека. Бесплатный расчет 
+    бодиграфа даст ответы на вопросы о вашем призвании и о способе принятии правильных решений. 
+    Расширенное прочтение бодиграфа составлено аналитиком Human Design, так же Генные Ключи, прогнозы, 
+    подбор команды" property="og:description">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@humdesign">
+    <meta name="twitter:url" content="http://humdesign.ru/">
+    <meta name="twitter:title" content="HumDesign - Узнайте все о Дизайне Человека,  Расчет бодиграфа, 
+    бесплатная расшифровка карты, генные ключи ">
+    <meta name="twitter:image" content="https://cdn.iconscout.com/icon/free/png-512/react-1-282599.png">
+    <meta name="twitter:description" content="Дизайн Человека - наука о генетических особенностях человека. 
+    Бесплатный расчет бодиграфа даст ответы на вопросы о вашем призвании и о способе принятии правильных 
+    решений. Расширенное прочтение бодиграфа составлено аналитиком Human Design, так же Генные Ключи, 
+    прогнозы, подбор команды">
+    <meta name="mrc__share_title" content="HumDesign - Узнайте все о Дизайне Человека, 
+    Расчет бодиграфа, бесплатная расшифровка карты, генные ключи ">
+    <meta name="mrc__share_description" content="Дизайн Человека - наука о генетических 
+    особенностях человека. Бесплатный расчет бодиграфа даст ответы на вопросы о вашем 
+    призвании и о способе принятии правильных решений. Расширенное прочтение бодиграфа 
+    составлено аналитиком Human Design, так же Генные Ключи, прогнозы, подбор команды">
+    <meta itemprop="name" content="HumDesign - Узнайте все о Дизайне Человека,  Расчет бодиграфа, 
+    бесплатная расшифровка карты, генные ключи ">
+    <meta itemprop="description" content="Дизайн Человека - наука о генетических особенностях 
+    человека. Бесплатный расчет бодиграфа даст ответы на вопросы о вашем призвании и о 
+    способе принятии правильных решений. Расширенное прочтение бодиграфа составлено аналитиком 
+    Human Design, так же Генные Ключи, прогнозы, подбор команды">
+    <meta itemprop="image" content="https://cdn.iconscout.com/icon/free/png-512/react-1-282599.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/afcc0ec049.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>HumDesign - Узнайте все о Дизайне Человека, Расчет бодиграфа, генные ключи, транзиты</title>
   </head>
   <body>
 
