--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     команды, gene keys'>
     <meta content='@humdesign' property='twitter:site'>
     <meta content='website' property='og:type'>
+	  <meta name="verification" content="a56e9f7abda11b4e6617a9bba95d69" />
     <meta content='HumDesign - Узнайте все о Дизайне Человека,  Расчет бодиграфа, бесплатная 
     расшифровка карты, генные ключи ' property='og:title'>
     <meta content='http://humdesign.ru/' property='og:url'>
