--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link rel='icon' href='%PUBLIC_URL%/favicon.ico' />
+    <link rel='icon' href='%PUBLIC_URL%/favicon.ico' type='image/x-icon' />
+    <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='theme-color' content='#000000' />
+    <meta name="yandex-verification" content="ef31aeaec7603e91" />
     <meta
       name='description'
       content='Дизайн Человека - наука о генетических особенностях человека. 
@@ -50,7 +52,6 @@
     способе принятии правильных решений. Расширенное прочтение бодиграфа составлено аналитиком 
     Human Design, так же Генные Ключи, прогнозы, подбор команды'>
     <meta itemprop='image' content='https://cdn.iconscout.com/icon/free/png-512/react-1-282599.png'>
-    <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <script src='https://kit.fontawesome.com/afcc0ec049.js' crossorigin='anonymous'></script>
     <title>HumDesign - Узнайте все о Дизайне Человека, Расчет бодиграфа, генные ключи, транзиты</title>
@@ -76,4 +77,7 @@
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/69685864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
+  <!--Chat-->
+  <script src="//code.tidio.co/0uvvz2qolyozal0xuyulapm8kad7xquk.js" async></script>
+  <!--Chat-->
 </html>
