--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,6 @@
     Human Design, так же Генные Ключи, прогнозы, подбор команды'>
     <meta itemprop='image' content='https://cdn.iconscout.com/icon/free/png-512/react-1-282599.png'>
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
-    <script src='https://kit.fontawesome.com/afcc0ec049.js' crossorigin='anonymous'></script>
     <title>HumDesign - Узнайте все о Дизайне Человека, Расчет бодиграфа, генные ключи, транзиты</title>
   </head>
   <body>
@@ -78,6 +77,6 @@
   <noscript><div><img src="https://mc.yandex.ru/watch/69685864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
   <!--Chat-->
-  <script src="//code.tidio.co/0uvvz2qolyozal0xuyulapm8kad7xquk.js" async></script>
+  <script async src='//code.tidio.co/0uvvz2qolyozal0xuyulapm8kad7xquk.js'></script>
   <!--Chat-->
 </html>
