--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
+    <link rel='preload'>
     <link rel='icon' href='%PUBLIC_URL%/favicon.ico' type='image/x-icon' />
     <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
