--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ru'>
   <head>
     <meta charset='utf-8' />
-    <link rel='preload'>
     <link rel='icon' href='%PUBLIC_URL%/favicon.ico' type='image/x-icon' />
     <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
+    <!-- <link rel="preload" href="../src/assets/fonts/Gilroy/stylesheet.sass" as="style"> -->
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='theme-color' content='#000000' />
-    <meta name="yandex-verification" content="ef31aeaec7603e91" />
     <meta
       name='description'
       content='Дизайн Человека - наука о генетических особенностях человека. 
@@ -61,23 +60,4 @@
     <div id='root'></div>
     
   </body>
-
-  <!-- Yandex.Metrika counter -->
-  <script async type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-    ym(69685864, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true,
-         webvisor:true
-    });
-  </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/69685864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!-- /Yandex.Metrika counter -->
-  <!--Chat-->
-  <script async src='//code.tidio.co/0uvvz2qolyozal0xuyulapm8kad7xquk.js'></script>
-  <!--Chat-->
 </html>
